<resources>
    <string name="app_name">MyApp</string>
    <string name="arquivo">Arquivo</string>
    <string name="alterar">Alterar</string>
    <string name="excluir">Excluir</string>
    <string name="pesquisar">Pesquisar</string>
    <string name="sair">Sair</string>
    <string name="compartilhar">Compartilhar</string>
    <string name="favoritar">Favoritar</string>
    <string name="status">Status</string>
    <string name="conversar">Conversar</string>
    <string name="downloads">Downloads</string>
</resources>