<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/mArquivo"
        android:icon="@drawable/baseline_archive"
        android:title="@string/arquivo"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/mAlterar"
        android:icon="@drawable/baseline_compare_arrows"
        android:title="@string/alterar"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/mExcluir"
        android:icon="@drawable/baseline_delete"
        android:title="@string/excluir"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/mPesquisar"
        android:icon="@drawable/baseline_search"
        android:title="@string/pesquisar"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/mSair"
        android:icon="@drawable/baseline_exit_to_app"
        android:title="@string/sair"
        app:showAsAction="ifRoom" />

</menu>